# xontrib-take

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release-drafter.yml  release.yml  test.yml
tests/: test_xontrib.py
xontrib/: take.xsh
